force-app/main/default/objects/Account/fields/Company_letterhead__c.field-meta.xml
<CustomField>
    <fullName>Company_letterhead__c</fullName>
    <label>公司抬頭</label>
    <length>20</length>
    <type>Text</type>
</CustomField>