force-app/main/default/objects/Account/fields/credit_card_number__c.field-meta.xml
<CustomField>
    <fullName>credit_card_number__c</fullName>
    <label>信用卡號</label>
    <length>16</length>
    <type>Text</type>
</CustomField>