force-app/main/default/objects/Account/fields/FacebookEmail__c.field-meta.xml
<CustomField>
    <fullName>FacebookEmail__c</fullName>
    <label>FacebookEmail</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>