force-app/main/default/objects/Account/fields/GoogleEmail__c.field-meta.xml
<CustomField>
    <fullName>GoogleEmail__c</fullName>
    <label>GoogleEmail</label>
    <type>Email</type>
    <unique>true</unique>
</CustomField>