force-app/main/default/objects/Account/fields/Lock__c.field-meta.xml
<CustomField>
    <fullName>Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>鎖定</label>
    <type>Checkbox</type>
</CustomField>