force-app/main/default/objects/Account/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>鎖定</label>
    <type>Checkbox</type>
</CustomField>