force-app/main/default/objects/Account/fields/PasswordRetry__c.field-meta.xml
<CustomField>
    <fullName>PasswordRetry__c</fullName>
    <defaultValue>0</defaultValue>
    <label>密碼輸入錯誤次數</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>