force-app/main/default/objects/Account/fields/Send_unit__c.field-meta.xml
<CustomField>
    <fullName>Send_unit__c</fullName>
    <label>寄送單位</label>
    <length>50</length>
    <type>Text</type>
</CustomField>