force-app/main/default/objects/Account/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>帳戶來源</label>
    <length>50</length>
    <type>Text</type>
</CustomField>