force-app/main/default/objects/Account/fields/Subscription_period__c.field-meta.xml
<CustomField>
    <fullName>Subscription_period__c</fullName>
    <label>訂閱期數</label>
    <length>50</length>
    <type>Text</type>
</CustomField>