force-app/main/default/objects/Account/fields/Tax_No__c.field-meta.xml
<CustomField>
    <fullName>Tax_No__c</fullName>
    <label>統一編號</label>
    <length>100</length>
    <type>Text</type>
</CustomField>