force-app/main/default/objects/Account/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>已驗證</label>
    <type>Checkbox</type>
</CustomField>